<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home_menu"
            android:icon="@drawable/white_home"
            android:actionLayout="@layout/menu_item_home"
            android:title="@string/home"
            app:showAsAction="ifRoom|withText"
            android:checked="true"/>

        <item
            android:id="@+id/workout_menu"
            android:icon="@drawable/white_run"
            android:actionLayout="@layout/menu_item_workout"
            android:title="@string/workout"
            app:showAsAction="ifRoom|withText"
            android:checked="false"/>

        <item
            android:id="@+id/profile_menu"
            android:icon="@drawable/white_profile"
            android:actionLayout="@layout/menu_item_profile"
            android:title="@string/profile"
            app:showAsAction="ifRoom|withText"
            android:checked="false"/>
    </group>
</menu>
<!--
    <?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto">
<item
    android:id="@+id/menu_style"
    android:checkableBehavior="single"
    android:icon="@drawable/ic_style"
    android:title="@string/style"
    app:showAsAction="ifRoom">
    <menu>
        <group android:checkableBehavior="single">
            <item
                android:id="@+id/menu_style_line"
                android:checked="true"
                android:title="@string/line" />
            <item
                android:id="@+id/menu_style_point"
                android:checked="false"
                android:title="@string/point" />
        </group>
    </menu>
</item>
</menu>
-->