<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.WorkoutMenuFragment"
    android:background="@drawable/background">

    <TextView
        android:id="@+id/tvWalkingMode"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/walking"
        android:fontFamily="@font/trebucbd"
        android:textSize="20sp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@id/topGuideline"
        app:layout_constraintLeft_toLeftOf="@id/leftGuideline"
        app:layout_constraintRight_toLeftOf="@id/tvRunningMode"
        android:gravity="center_horizontal"/>

    <TextView
        android:id="@+id/tvRunningMode"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/running"
        android:fontFamily="@font/trebucbd"
        android:textSize="20sp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@id/topGuideline"
        app:layout_constraintLeft_toRightOf="@id/tvWalkingMode"
        app:layout_constraintRight_toLeftOf="@id/tvCyclingMode"
        android:gravity="center_horizontal"/>

    <TextView
        android:id="@+id/tvCyclingMode"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/cycling"
        android:fontFamily="@font/trebucbd"
        android:textSize="20sp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@id/topGuideline"
        app:layout_constraintLeft_toRightOf="@id/tvRunningMode"
        app:layout_constraintRight_toRightOf="@id/rightGuideline"
        android:gravity="center_horizontal"/>

    <LinearLayout
            android:id="@+id/llChallengesBackground"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/white_background"
            app:layout_constraintLeft_toLeftOf="@id/leftGuideline"
            app:layout_constraintRight_toRightOf="@id/rightGuideline"
            app:layout_constraintTop_toTopOf="@id/tvRunningMode"
            android:layout_marginTop="48dp"
            android:orientation="vertical">

        <TextView
            android:id="@+id/tvChallenges"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/challenges"
            android:fontFamily="@font/trebucbd"
            android:textSize="16sp"
            android:textColor="@color/primary"
            android:layout_marginTop="12dp"
            android:layout_marginLeft="12dp"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ivDailyChallenge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:background="@drawable/blue_background"
            android:layout_marginHorizontal="24dp"
            android:layout_marginVertical="12dp">

            <TextView
                android:id="@+id/tvDailyTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/trebucbd"
                android:text="@string/daily"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:paddingVertical="8dp"
                android:paddingLeft="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvDailyDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/trebucbd"
                android:text="Walk for 60 minutes"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:paddingVertical="8dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="@id/dailyGuideline"
                app:layout_constraintRight_toLeftOf="@id/tvDailyValue"/>

            <TextView
                android:id="@+id/tvDailyValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0/60"
                android:fontFamily="@font/trebucbd"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:paddingVertical="8dp"
                android:paddingLeft="8dp"
                app:layout_constraintRight_toLeftOf="@id/tvDailyMetric"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <TextView
                android:id="@+id/tvDailyMetric"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/trebucbd"
                android:text="min"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:paddingTop="12dp"
                android:paddingBottom="4dp"
                android:paddingLeft="2dp"
                android:paddingRight="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/dailyGuideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.3" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ivWeeklyChallenge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:background="@drawable/blue_background"
            android:layout_marginHorizontal="24dp"
            android:layout_marginBottom="18dp">

            <TextView
                android:id="@+id/tvWeeklyTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/trebucbd"
                android:text="@string/weekly"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:paddingVertical="8dp"
                android:paddingLeft="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvWeeklyDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/trebucbd"
                android:text="Walk 10 kilometers"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:paddingVertical="8dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="@id/weeklyGuideline"
                app:layout_constraintRight_toLeftOf="@id/tvWeeklyValue"/>

            <TextView
                android:id="@+id/tvWeeklyValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0/10"
                android:fontFamily="@font/trebucbd"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:paddingVertical="8dp"
                android:paddingLeft="8dp"
                app:layout_constraintRight_toLeftOf="@id/tvWeeklyMetric"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <TextView
                android:id="@+id/tvWeeklyMetric"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/trebucbd"
                android:text="km"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:paddingTop="12dp"
                android:paddingBottom="4dp"
                android:paddingLeft="2dp"
                android:paddingRight="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/weeklyGuideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.3" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/ivMap"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:padding="12dp"
        style="@style/white_style"
        android:src="@drawable/map"
        app:tint="#888888"
        android:tintMode="multiply"
        android:adjustViewBounds="true"
        app:layout_constraintLeft_toLeftOf="@id/leftGuideline"
        app:layout_constraintRight_toRightOf="@id/rightGuideline"
        app:layout_constraintTop_toBottomOf="@id/llChallengesBackground"
        android:contentDescription="@string/map"/>

    <Button
        android:id="@+id/btnStartWorkout"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:background="@drawable/round_blue"
        android:fontFamily="@font/trebucbd"
        android:text="@string/go"
        android:textSize="36sp"
        android:padding="0dp"
        app:layout_constraintTop_toBottomOf="@id/ivMap"
        app:layout_constraintBottom_toBottomOf="@id/ivMap"
        app:layout_constraintLeft_toLeftOf="@id/ivMap"
        app:layout_constraintRight_toRightOf="@id/ivMap"/>


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rightGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/topGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tb_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="?android:colorPrimary" />

</androidx.constraintlayout.widget.ConstraintLayout>